# frac-website

./: .env.example  COMPLETE_SUMMARY.md  README.md  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
dapps/: AllDApps.tsx  App.css  App.tsx  INTEGRATION_GUIDE.md  README.md  WalletProvider.tsx  config.ts  index.tsx  package.json
dapps/staking/: StakingDApp.css  StakingDApp.tsx
dapps/vaults/: VaultsDApp.css  VaultsDApp.tsx
frac-contracts/: .gitignore  Anchor.toml  Cargo.toml  DEPLOYMENT.md  README.md  SETUP.md  STATUS.md  package.json
frac-contracts/programs/access-control/: Cargo.toml
frac-contracts/programs/access-control/src/: lib.rs
frac-contracts/programs/bridge/: Cargo.toml
frac-contracts/programs/bridge/src/: lib.rs
frac-contracts/programs/enterprise/: Cargo.toml
frac-contracts/programs/enterprise/src/: lib.rs
frac-contracts/programs/frac-token/: Cargo.toml
frac-contracts/programs/frac-token/src/: lib.rs
frac-contracts/programs/fractional-ownership/: Cargo.toml
frac-contracts/programs/fractional-ownership/src/: lib.rs
frac-contracts/programs/governance/: Cargo.toml
frac-contracts/programs/governance/src/: lib.rs
frac-contracts/programs/rewards/: Cargo.toml
frac-contracts/programs/rewards/src/: lib.rs
frac-contracts/programs/staking/: Cargo.toml
frac-contracts/programs/staking/src/: lib.rs
frac-contracts/scripts/: deploy.ts
frac-contracts/sdk/: README.md  hooks.tsx  index.ts
frac-contracts/sdk/examples/: StakingComponent.tsx  VaultTradingComponent.tsx
frac-contracts/tests/: access-control.ts  bridge.ts  enterprise.ts  frac-token.ts  fractional-ownership.ts  governance.ts  integration.ts  rewards.ts  staking.ts
(+22 files in other folders)
