[workspace]
members = [
    "programs/frac-token",
    "programs/fractional-ownership",
    "programs/staking",
    "programs/governance",
    "programs/access-control",
    "programs/rewards",
    "programs/enterprise",
    "programs/bridge",
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
