[package]
name = "governance"
version = "0.1.0"
description = "FractionalBase Governance DAO Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "governance"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
